# finance-analytics-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: development_log.md
